module-info and testing